--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1,3 +1,12 @@
 .main {
 	padding-top: 5% !important;
 }
+.alert {
+  margin-bottom: 0px;
+}
+.hidden {
+  display: none
+}
+.footer-box {
+  background-color: #cecece;
+}
