--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -1,6 +1,8 @@
-div class="question-#{question.id}"
-  h1 = question.title
+div class="question-#{question.id} pl-2"
+  h2 = question.title
   p = question.body
+  p #{current_user.email} - #{question.created_at.strftime("%d.%m.%y ")}
+
   - if current_user && current_user.author_of?(question)
     = link_to 'Edit question', edit_question_path(question), data: { question_id: question.id }, class: 'edit-question-link btn btn-sm btn-outline-warning'
     = link_to 'Delete question', question_path(question), 
@@ -18,3 +20,5 @@ div class="question-#{question.id}"
           = f.text_area :body, id: :question_body, class: "form-control"
 
       = f.submit 'Save question', class: "btn btn-outline-primary mt-2"
+
+hr
