--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1,3 +1,7 @@
+.new-answer-form {
+  margin-top: 10%;
+  padding: 5%;
+}
 .main {
 	padding-top: 5% !important;
 }
@@ -9,4 +13,7 @@
 }
 .footer-box {
   background-color: #cecece;
+}
+ul {
+	list-style: none;
 }
